# django-demo

./: .gitignore  README.md  db.sqlite3  hello.py  pyproject.toml  re-create-db.sh  schema.yml
docs/: redoc-static.html  redoc.html  restaurant.md
mysite/: settings.py  urls.py
restaurant/: admin.py  authentication.py  exceptions.py  models.py  serializers.py  tests.py  urls.py  views.py
restaurant/migrations/: 0001_initial.py
restaurant/views/: __init__.py  restaurant.py  user.py
tests/: test_demo.py
